getting templates working and models built out better

--- a/arenafighter/templates/home.html
+++ b/arenafighter/templates/home.html
@@ -3,9 +3,9 @@
 <head></head>
 <title>Josh's ARENA FIGHTER</title>
 <body>
-Hello {{ name }}
+<p><center><h2>Welcome to Arena-Fighter! The lamest game you'll ever play! (not really)</h2></center></p>
 
-
+{% url 'arena' %}
 
 
 
