--- a/arenafighter/templates/home.html
+++ b/arenafighter/templates/home.html
@@ -1,3 +1,4 @@
+{% load %}
 <html>
 
 <head></head>
@@ -5,7 +6,14 @@
 <body>
 <p><center><h2>Welcome to Arena-Fighter! The lamest game you'll ever play! (not really)</h2></center></p>
 
-{% url 'arena' %}
+<p>The following characters are available for you to play as:</p>
+{% for char in characters %}
+    <a href="{{ char }}">{{ char }}</a>
+{% endfor %}
+
+<p>Or create a new character</p>
+{{ form }}
+<a href ="{% url 'battle' %}">TO BATTLE!!</a>
 
 
 
