--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -1,11 +1,13 @@
-<html>
-<head>Your Character's Information</head>
-<body>
-
+{% extends 'base.html' %}
+{% block title %}Your Character's Information{% endblock %}
+{% block content %}
 <p>LEVEL {{ level }}</p>
 <p>HP {{ hpmax }}</p>
 <p>base attack {{ base_attack }}</p>
 <p>base defense {{ base_defense }}</p>
 <p>GOLD {{ gold }}</p>
-</body>
-</html>
+<br/> <br/>
+
+<a href="">Play as this Character</a>
+
+{% endblock %}
