--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -8,6 +8,7 @@
 <p>GOLD {{ gold }}</p>
 <br/> <br/>
 
-<a href="">Play as this Character</a>
+<a href="">Play as this Character</a><br/>
+<a href="{% url 'home' %}">HOME</a><br/>
 
 {% endblock %}
