--- a/arenafighter/templates/home.html
+++ b/arenafighter/templates/home.html
@@ -14,6 +14,6 @@
 {{ form.as_p }}
 <input type="submit" value="Create New Character"/>
 </form>
-<a href ="{% url 'battle' %}">ONWARD, TO GLORIOUS BATTLE!!</a>
+<a href ="{% url 'battle' %}">ONWARD, TO GLORIOUS BATTLE!!</a><br/>
 
 {% endblock %}
