--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -9,6 +9,6 @@
 <br/> <br/>
 
 <a href="{% url 'play_as_character' player.id %}">Play as this Character</a><br/>
-<a href="{% url 'delete' player.id %}">Delete Character</a>
+<a href="{% url 'delete' player.id %}">Delete Character</a><br/><br/>
 
 {% endblock %}
