--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -10,6 +10,7 @@
 <a href="{% url 'player_info' 5 %}">CHARACTER INFO</a> |
 <a href="{% url 'battle' %}">TO BATTLE!!</a> |
 <a href="{% url 'store' %}">STORE</a> |
+{% if request.user.is_authenticated %}<a href="{% url 'log_out' %}">LOGOUT</a>{% endif %}
 {% endblock %}
 </body>
 
