--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -7,7 +7,9 @@
 
 {% block footer_nav %}
 {% if request.path != '/' %}<a href="{% url 'home' %}">HOME</a> | {% endif %}
-<a href="{% url 'player_info' 5 %}">CHARACTER INFO</a> |
+{% if request.user.profile.current_character %}
+<a href="{% url 'player_info' request.user.profile.current_character.id %}">CHARACTER INFO</a> |
+{% endif %}
 <a href="{% url 'battle' %}">TO BATTLE!!</a> |
 <a href="{% url 'store' %}">STORE</a> |
 {% if request.user.is_authenticated %}<a href="{% url 'log_out' %}">LOGOUT</a>{% endif %}
