--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -4,15 +4,18 @@
 <title>{% block title %}{% endblock %}</title>
 <body>
 {% block content %}{% endblock %}
+<p>You are currently playing as {{ user.profile.current_character }}</p>
+
 
 {% block footer_nav %}
 {% if request.path != '/' %}<a href="{% url 'home' %}">HOME</a> | {% endif %}
-{% if request.user.profile.current_character %}
-<a href="{% url 'player_info' request.user.profile.current_character.id %}">CHARACTER INFO</a> |
+{% if user.profile.current_character %}
+<a href="{% url 'player_info' user.profile.current_character.id %}">CHARACTER INFO</a> |
 {% endif %}
+{% if user.is_authenticated %}
 <a href="{% url 'battle' %}">TO BATTLE!!</a> |
 <a href="{% url 'store' %}">STORE</a> |
-{% if request.user.is_authenticated %}<a href="{% url 'log_out' %}">LOGOUT</a>{% endif %}
+<a href="{% url 'log_out' %}">LOGOUT</a>{% endif %}
 {% endblock %}
 </body>
 
