--- a/arenafighter/templates/arena.html
+++ b/arenafighter/templates/arena.html
@@ -1,1 +1,13 @@
 {% extends 'base.html' %}
+
+{% block content %}
+
+<center>
+    'Allo there, warrior. Lookin' for a fight? We've got 'em! If yer chicken, ya can always run away.
+<br/><br/><br/>
+<a href="{% url 'fight' %}">FIGHT!!</a>
+<a href="{% url 'home' %}">RUN AWAY!!</a>
+</center>
+{% endblock %}
+
+
