battle system working!! also added a message after the fight from the arena master

--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -1,7 +1,8 @@
 <html>
 
 <head></head>
-<title>{% block title %}{% endblock %}</title>
+<title>{% block title %}Josh's ARENA FIGHTER{% endblock %}
+</title>
 <body>
 <p><center><h2>Welcome to Arena-Fighter! The lamest game you'll ever play! (not really)</h2></center></p>
 
