--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -7,6 +7,11 @@
 <p>base attack {{ character.base_attack }}</p>
 <p>base defense {{ character.base_defense }}</p>
 <p>GOLD {{ character.gold }}</p>
+<p>XP {{ character.xp }}</p>
+<p>FIGHTS WON {{ character.fights_won }}</p>
+<p>FIGHTS LOST {{ character.fights_lost }}</p>
+<p></p>
+<p></p>
 {% if character == user.profile.current_character %}
 *** THIS IS YOUR CURRENT CHARACTER ***
 {% endif %}
