--- a/arenafighter/templates/arena.html
+++ b/arenafighter/templates/arena.html
@@ -5,6 +5,8 @@
 <center>
     'Allo there, warrior. Lookin' for a fight? We've got 'em! If yer chicken, ya can always run away.
 <br/><br/><br/>
+    {{ message }}
+<br/><br/><br/>
 <a href="{% url 'fight' %}">FIGHT!!</a>
 <a href="{% url 'home' %}">RUN AWAY!!</a>
 </center>
