--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -10,6 +10,13 @@
 <p>XP {{ character.xp }}</p>
 <p>FIGHTS WON {{ character.fights_won }}</p>
 <p>FIGHTS LOST {{ character.fights_lost }}</p>
+-----------------------------
+<p>INVENTORY: {{ character.inventory.items }}</p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
 <p></p>
 <p></p>
 {% if character == user.profile.current_character %}
