--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -7,7 +7,13 @@
 {{ item.buy_value }}
 {{ item.sell_value }}
 
-
+{% if item.type == 'Weapon' %}
+<a href="{% url 'buy_weapon' item.id %}">
+{% elif item.type == 'InventoryItem' %}
+<a href="{% url 'buy_item' item.id %}">
+{% elif item.type == 'Armor' %}
+<a href="{% url 'buy_armor' item.id %}">{% endif %}
+Purchase</a>
 
 
 
