deleting migrations, decreasing DB calls, adding debug-toolbar

--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -16,13 +16,17 @@ You are currently logged in as {{ user.username }}
 {% endif %}
 <br/>
 <a href="{% url 'home' %}">HOME</a>
-{% if user.profile.current_character %}
- | <a href="{% url 'player_info' user.profile.current_character.id %}">CHARACTER INFO</a>
-{% endif %}
+
 {% if user.is_authenticated %}
+{% with character_id=user.profile.current_character.id %}
+    {% if character_id %}
+     | <a href="{% url 'player_info' character_id %}">CHARACTER INFO</a>
+    {% endif %}
+{% endwith %}
  | <a href="{% url 'arena' %}">TO BATTLE!!</a> |
 <a href="{% url 'store' %}">STORE</a> |
-<a href="{% url 'log_out' %}">LOGOUT</a>{% endif %}
+<a href="{% url 'log_out' %}">LOGOUT</a>
+{% endif %}
 <br/>
 </center>
 {% endblock %}
