--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -27,7 +27,7 @@
 <p></p>
 <p></p>
 <p></p>
-{% if character == user.profile.current_character %}
+{% if character == current_character %}
 *** THIS IS YOUR CURRENT CHARACTER ***
 {% endif %}
 <br/> <br/>
