--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -18,7 +18,7 @@ You are currently logged in as {{ user.username }}
 <a href="{% url 'home' %}">HOME</a>
 
 {% if user.is_authenticated %}
-{% with character_id=user.profile.current_character.id %}
+{% with character_id=user.profile.current_character_id %}
     {% if character_id %}
      | <a href="{% url 'player_info' character_id %}">CHARACTER INFO</a>
  | <a href="{% url 'arena' %}">TO BATTLE!!</a> |
