--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -2,28 +2,37 @@
 
 
 {% block content %}
-
-{{ item }}
-{{ item.name }}
-{{ item.description }}
-{{ item.buy_value }}
-{{ item.slots_required }}
-{{ item.inventory }}
-{{ item.type }}
-{{ item.sell_value }}
-
-{% if item.equipped_on %}
+<p>{{ item.name }}
+</p>
+<p>{{ item.description }}
+</p>
+<p>{{ item.buy_value }}
+</p>
+<p>{{ item.slots_required }}
+</p>
+{% if item.inventory %}
+<p>{{ item.inventory }}
+</p>
+{% endif %}
+<p>{{ item.type }}
+</p>
+<p>{{ item.sell_value }}
+</p>
+<p>{% if item.equipped_on.all %}
 {{ item.equipped_on.all }}
 {% endif %}
+</p>
 
+<p>
 {% if item.defense_value %}
 {{ item.defense_value }}
 {% endif %}
-
+</p>
+<p>
 {% if item.attack_value %}
 {{ item.attack_value }}
 {% endif %}
-
+</p>
 
 {% if store %}
 {% if item.type == 'Weapon' %}
