--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -22,7 +22,9 @@
 </p>
 <p>{% if user.profile.current_character not in item.equipped_on.all %}
 THIS ITEM EQUIPPED ON:  {{ item.equipped_on.all }}
+{% if not store %}
 <a href="{% url 'equip' item.type item.id %}">EQUIP THIS ITEM</a>
+{% endif %}
 {% endif %}
 </p>
 
