--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -13,14 +13,14 @@
 -----------------------------
 <p>INVENTORY: </p>
 {% for item, value in item_count.items %}
-<p> **  <a href="{% url 'item_info' item %}">{{ item }}</a> x {{ value }}</p>
+<p> **  <a href="{% url 'item_detail' item %}">{{ item }}</a> x {{ value }}</p>
 {% endfor %}
 {% for item,value in weapons_count.items %}
-<p> **  <a href="{% url 'weapon_info' item %}">{{ item }}</a> x {{ value }}</p>
+<p> **  <a href="{% url 'weapon_detail' item %}">{{ item }}</a> x {{ value }}</p>
 {#<p> **  {{ item.inventory.all }}</p> endcomment #}
 {% endfor %}
 {% for item, value in armor_count.items %}
-<p> **  <a href="{% url 'armor_info' item %}">{{ item }}</a> x {{ value }}</p>
+<p> **  <a href="{% url 'armor_detail' item %}">{{ item }}</a> x {{ value }}</p>
 {% endfor %}
 <p></p>
 <p></p>
