--- a/arenafighter/templates/store.html
+++ b/arenafighter/templates/store.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 Well, hello there, stranger! Welcome to the shop.
-
 <br/><br/><br/>
+If yer in the mood to make some coin, you can always <a href="{% url 'sell_detail' %}">SELL</a> some items from your inventory.
 <p>ITEMS:</p>
 {% for item, value in items.items %}
 <p>** <a href="{% url 'shop_item_detail' item %}">{{ item }}</a> x {{ value }}</p>
@@ -14,7 +14,7 @@ Well, hello there, stranger! Welcome to the shop.
 {% endfor %}
 <br/><br/><br/>
 <p>ARMORS:</p>
-{% for armor, value in armors.items %}
+{% for armor, value in armor.items %}
 <p>**  <a href="{% url 'shop_armor_detail' armor %}">{{ armor }}</a> x {{ value }}</p>
 {% endfor %}
 
