more refactor of inventory/item system

--- a/arenafighter/templates/home.html
+++ b/arenafighter/templates/home.html
@@ -23,4 +23,23 @@
 <a href="{% url 'log_in' %}">Login</a>
 </center>
 {% endif %}
+
+
+{% comment %}
+jQuery(document).ready(function() {
+  jQuery('a.confirm').click(function(event) {
+    event.preventDefault()
+    var url = $(this).attr('href');
+    var confirm_box = confirm('Are you sure you want to click this link?');
+    if (confirm_box) {
+       window.location = url;
+       //uncomment below and remove above if you want the link to open in a new window
+       //window.open(url,'_blank');
+    }
+  });
+});
+{% endcomment %}
+
+
+
 {% endblock %}
