--- a/arenafighter/templates/store.html
+++ b/arenafighter/templates/store.html
@@ -4,20 +4,24 @@ Well, hello there, stranger! Welcome to the shop.
 <br/><br/><br/>
 If yer in the mood to make some coin, you can always <a href="{% url 'sell_detail' %}">SELL</a> some items from your inventory.
 <p>ITEMS:</p>
-{% for item, value in items.items %}
-<p>** <a href="{% url 'shop_item_detail' item %}">{{ item }}</a> x {{ value }}</p>
+{% for potion in potions %}
+<p>** <a href="{% url 'item_detail' potion.id %}">{{ potions.0 }}</a> x {{ num_potions }}</p>
 {% endfor %}
 <br/><br/><br/>
 <p>WEAPONS:</p>
-{% for weapon, value in weapons.items %}
-<p>** <a href="{% url 'shop_weapon_detail' weapon %}">{{ weapon }}</a> x {{ value }}</p>
+{% for weapon in weapons %}
+<p>** <a href="{% url 'weapon_detail' weapon.id %}">{{ weapon }}</a> x {{ num_weapons }}</p>
 {% endfor %}
 <br/><br/><br/>
 <p>ARMORS:</p>
-{% for armor, value in armor.items %}
-<p>**  <a href="{% url 'shop_armor_detail' armor %}">{{ armor }}</a> x {{ value }}</p>
+{% for armor in armors %}
+<p>** <a href="{% url 'armor_detail' armor.id %}">{{ armor }}</a> x
+    {% for value in num_armors %}
+    {% if forloop.counter == forloop.parentloop.counter %}
+        {{value}}
+    {%endif%}
+    {% endfor %}</p>
 {% endfor %}
-
 
 
 {% endblock %}
