more refactors to architecture

--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -11,7 +11,7 @@
 <p>FIGHTS WON {{ character.fights_won }}</p>
 <p>FIGHTS LOST {{ character.fights_lost }}</p>
 -----------------------------
-{% include 'sell_items.html' with items=items %}
+{% include 'inventory_list.html' with items=items %}
 <p></p>
 <p></p>
 <p></p>
