--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -55,6 +55,15 @@ ATTACK VALUE:  {{ item.attack_value }}
 </form>
 {% endif %}
 
+{% if unequip_form and item.inventory == user.profile.current_character.inventory %}
+<form action="" method="post">
+    {% csrf_token %}
+    <input type="hidden" value="{{item.id}}" name="item_id"/>
+    <input type="hidden" value="unequip" name="unequip"/>
+    <input type="submit" value="Un-Equip"/>
+</form>
+{% endif %}
+
 {% if sell %}
 <a href="{% url 'sell_item' item.type item.id %}">Sell</a>
 {% endif %}
