--- a/arenafighter/templates/inventory_list.html
+++ b/arenafighter/templates/inventory_list.html
@@ -1,21 +1,20 @@
 
 
-<p>INVENTORY: </p>
 {% for item, value in items.items %}
 {% if item.type == "potion" and not sell %}
-<p> **  <a href="{% url 'item_detail' item.id %}">{{ item }}</a> x {{ value }}</p>
+**  <a href="{% url 'item_detail' item.id %}">{{ item }}</a><br/>
 {% elif item.type == "potion" and sell %}
-<p> **  <a href="{% url 'sell_item_detail' item.id %}">{{ item }}</a> x {{ value }}</p>
+**  <a href="{% url 'sell_item_detail' item.id %}">{{ item }}</a><br/>
 {% endif %}
 {% if item.type == "weapon" and not sell %}
-<p> **  <a href="{% url 'weapon_detail' item.id %}">{{ item }}</a> x {{ value }}</p>
+**  <a href="{% url 'weapon_detail' item.id %}">{{ item }}</a><br/>
 {% elif item.type == "weapon" and sell %}
-<p> **  <a href="{% url 'sell_weapon_detail' item.id %}">{{ item }}</a> x {{ value }}poop</p>
+**  <a href="{% url 'sell_weapon_detail' item.id %}">{{ item }}</a><br/>
 {% endif %}
 {% if item.type == "armor" and sell %}
-<p> **  <a href="{% url 'sell_armor_detail' item.id %}">{{ item }}</a> x {{ value }}poop</p>
+**  <a href="{% url 'sell_armor_detail' item.id %}">{{ item }}</a><br/>
 {% elif item.type == "armor" and not sell %}
-<p> **  <a href="{% url 'armor_detail' item.id %}">{{ item }}</a> x {{ value }}</p>
+**  <a href="{% url 'armor_detail' item.id %}">{{ item }}</a><br/>
 {% endif %}
 {% endfor %}
 
